Fix Visiblity of Selected Account When Opening Dropdown
Change the transition styling of the AccountSelect component's dropdown
element so it fades in instead of sliding down. This fixes a bug where
the selected item would not be visible when the dropdown is opened,
which was caused by transitioning the height when opening the dropdown.

Instead, we now do an opacity transition when the dropdown is opened so
the height stays fixed and the item stays visible.

--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -304,18 +304,22 @@ div.account-select
   > div
     background-color: $input-bg
     position: absolute
-    height: 0
+    height: 12rem
     width: 100%
     overflow-y: scroll
-    z-index: 1
     border-bottom-left-radius: #{$border-radius / 2}
     border-bottom-right-radius: #{$border-radius / 2}
     box-shadow: 0 3px 4px 0 rgba(black, 0.3)
+    visibility: hidden
+    z-index: -1
+    opacity: 0
     &.opened
-      height: 12rem
-      // Setting the transition here lets us scroll the dropdown open but snap
+      visibility: visible
+      z-index: 1
+      opacity: 1
+      // Setting the transition here lets us fade the dropdown open and snap
       // it closed
-      transition: height 0.2s ease-in
+      transition: opacity 0.2s ease-in
     // Dropdown Items
     > div
       text-align: left
